--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josué Rodríguez - Portfolio Personal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Silkscreen:wght@400;700&display=swap"
+rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -155,7 +159,7 @@
                     
                     <article class="project project--featured">
                         <span class="project__badge">Destacado</span>
-                        <h3 class="project__title">Portafolio Personal</h3>
+                        <h3 class="project__title">Portfolio Personal</h3>
                         <p class="project__description">
                             Este mismo que estás viendo. Mi proyecto más
                             completo donde aplico todo lo que he aprendido en HTML y CSS.
@@ -256,7 +260,7 @@
                 <div class="contact__methods">
                     <div class="contact__method">
                         <h3 class="contact__method-title">📧 Email</h3>
-                        <a href="jdry.nintendo@gmail.com" class="contact__link">
+                        <a href="mailto:jdry.nintendo@gmail.com" class="contact__link">
                         jdry.nintendo@gmail.com
                         </a>
                     </div>
